--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "lint"
   ],
   "dependencies": {
+    "flyio": "^0.5.9",
     "mpvue": "^1.0.11",
     "mpvue-router-patch": "^0.2.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.6.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.1",
